--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
+
 }
 
 
@@ -64,5 +66,8 @@ dependencies {
     kapt "com.github.moxy-community:moxy-compiler:2.2.2"
     implementation "com.github.moxy-community:moxy-ktx:2.2.2"
     implementation 'com.github.moxy-community:moxy-androidx:2.2.2'
+
+    implementation 'com.github.terrakok:cicerone:6.6'
+
 
 }
