--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,9 @@ dependencies {
 
     implementation 'com.github.terrakok:cicerone:6.6'
 
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+
+
 
 }
